maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:12: error: Boolean does not take parameters
  while(!nordFree()){
                 ^