maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
  while (!estSurBiscuit()){
    longerMur()
  }
  prendBiscuit()
}


def longerMur(){
  var nordFree:Boolean=false
  while(!nordFree()){
    gauche()
    if (estFaceMur()){
      droite()
      if (!estFaceMur()){
        avance()
      } else {
        droite()
        if (estFaceMur()){
          droite()
          avance()
        } else {
          avance()
        }
      }
    } else {
      avance()
    }
    if (getDirection==Direction.NORD && !estFaceMur){
      nordFree=true
    } else {
      nordFree=false
    }
  }
}